--- a/course-materials/assignments/HW4.qmd
+++ b/course-materials/assignments/HW4.qmd
@@ -16,9 +16,13 @@ Your final assignment is meant to combine all of the course learning outcomes(!)
 
 ## Description{#hw4-options} 
 
-[**Choose to complete *one* of the below options:**]{.teal-text}
+Your final project consists of three parts. Please read all parts carefully:
 
-### OPTION 1: Infographic {#option1-infographic}
+### 1. Choose *one* of the following project options {#part1-choose}
+
+<!-- [**Choose to complete *one* of the below options:**]{.teal-text} -->
+
+#### OPTION 1: Infographic {#option1-infographic}
 
 ::: {.callout-note collapse=true}
 ## Option 1 (infograpic) details
@@ -39,14 +43,14 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 
 **And a few more fun examples from other `{ggplot2}` creators:**
 
-- [UFO Sightings](https://github.com/doehm/tidytues?tab=readme-ov-file#week-25-ufo-sightings), by [Dan Oehm](https://github.com/doehm) (from HW #1!)
-- [Numbats](https://github.com/doehm/tidytues?tab=readme-ov-file#week-10-numbats), by [Dan Oehm](https://github.com/doehm)
-- [Haunted Places](https://github.com/doehm/tidytues?tab=readme-ov-file#week-41-haunted-places), by [Dan Oehm](https://github.com/doehm)
-- [School Diversity](https://github.com/z3tt/TidyTuesday?tab=readme-ov-file#week-201939%EF%B8%8F-%EF%B8%8F-school-diversity-by-nces), by [Cédric Scherer](https://github.com/z3tt)
-- [Allons-y to Gallifrey](https://twitter.com/thedivtagguy/status/1731323379171447048), by [Aman Bhargava](https://aman.bh/)
+- [UFO Sightings](https://github.com/doehm/tidytues?tab=readme-ov-file#week-25-ufo-sightings){target="_blank"}, by [Dan Oehm](https://github.com/doehm){target="_blank"} (from HW #1!)
+- [Numbats](https://github.com/doehm/tidytues?tab=readme-ov-file#week-10-numbats){target="_blank"}, by [Dan Oehm](https://github.com/doehm){target="_blank"}
+- [Haunted Places](https://github.com/doehm/tidytues?tab=readme-ov-file#week-41-haunted-places){target="_blank"}, by [Dan Oehm](https://github.com/doehm){target="_blank"}
+- [School Diversity](https://github.com/z3tt/TidyTuesday?tab=readme-ov-file#week-201939%EF%B8%8F-%EF%B8%8F-school-diversity-by-nces){target="_blank"}, by [Cédric Scherer](https://github.com/z3tt){target="_blank"}
+- [Allons-y to Gallifrey](https://twitter.com/thedivtagguy/status/1731323379171447048){target="_blank"}, by [Aman Bhargava](https://aman.bh/){target="_blank"}
 :::
 
-### OPTION 2: Three viz, same question, different audiences {#option2-diff-audiences}
+#### OPTION 2: Three viz, same question, different audiences {#option2-diff-audiences}
 
 ::: {.callout-note collapse=true}
 ## Option 2 (three viz) details
@@ -60,7 +64,7 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 3. **A visualization for public outreach / a general audience:** The purpose of this visualization is to raise awareness, prompt discussion, or otherwise engage an audience who may not have domain-specific knowledge or expertise. These types of visuals should limit (or fully omit) the use of any jargon. They may display findings in an atypical but creative way, as well as blend both art and science. A great (and famous) example is [Ed Hawkins](https://research.reading.ac.uk/meteorology/people/ed-hawkins/){target="_blank"}' [Warming Strips](https://showyourstripes.info/s){target="_blank"}
 :::
 
-### OPTION 3: Propose an alternative project idea {#option3-alternative}
+#### OPTION 3: Propose an alternative project idea {#option3-alternative}
 
 ::: {.callout-note collapse=true}
 ## Option 3 (propose an alternative) details
@@ -78,7 +82,7 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 
 [**Regardless of which option you choose, you are expected to consider all design elements discussed throughout the quarter, implement as appropriate, and justify your decisions.**]{.teal-text} These include, but are not limited to:
 
-1. graphic form (you are **not** limited to just those fundamental chart types discussed in weeks 2 & 4 -- explore other chart types and don't be afraid to get really creative with it; check out some of these awesome [data viz creators](../../resources.qmd#inspirational-data-visualization-creators){target="_blank"} to find inspiration)
+1. graphic form (you are **not** limited to just those fundamental chart types discussed in weeks 2 & 4 -- explore other chart types and don't be afraid to get creative with it; check out some of these awesome [data viz creators](../../resources.qmd#inspirational-data-visualization-creators){target="_blank"} to find inspiration)
 2. text (e.g. titles, captions, annotations, axis labels, axis ticks, alt text)
 3. themes (i.e. all non-data plot elements; these should be intentionally modified and visually-pleasing)
 4. colors
@@ -89,37 +93,59 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 9. considering accessibility (e.g. colorblind-friendly palettes / contrast, alt text) 
 10. applying a DEI lens to your design, as appropriate (e.g. considering the people / communities / places represented in your data, consider how you frame your questions / issue)
 
-[**In addition to producing your visualizations, you are expected to follow clean and organized coding practices:**]{.teal-text}
+<!-- [**In addition to producing your visualizations, you are expected to follow clean and organized coding practices:**]{.teal-text} -->
 
-- follow the [tidyverse style guide](https://style.tidyverse.org/){target="_blank"} (important styles are outlined on the [course website](../../clean-code-guide.qmd#general-conventions){target="_blank"})
-- organize and annotate code (see [these recommendations](../../clean-code-guide.qmd#annotating-code){target="_blank"})
-- apply the appropriate code chunk options (e.g. in most cases, code and outputs should be rendered but warnings and messages should not) -- see the Quarto documentation on [HTML Code Blocks](https://quarto.org/docs/output-formats/html-code.html){target="_blank"} and [Execution Options](https://quarto.org/docs/computations/execution-options.html){target="_blank"} for more
-  - (optional) I recommend also applying the [`code-fold: true` option](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}, which collapses code chunks and makes it easier for readers to focus on your writing and embedded visualizations (while still allowing them to explore your code)
+<!-- - follow the [tidyverse style guide](https://style.tidyverse.org/){target="_blank"} (important styles are outlined on the [course website](../../clean-code-guide.qmd#general-conventions){target="_blank"}) -->
+<!-- - organize and annotate code (see [these recommendations](../../clean-code-guide.qmd#annotating-code){target="_blank"}) -->
 
-[**You will also share your data design process and decisions in a short, 1-2 page (~500-1,000 words) science communication blog post-style write up. Your writing should:**]{.teal-text}
+<!-- ::: {.callout-important} -->
+<!-- ## TODO -->
+<!-- revise / move this -->
 
-1. include an engaging introduction paragraph(s), which states your motivation, question(s), data / data source(s), and goal(s) of your visualization. A few great examples:
-    - [Relationship between bee behavior and vineyard types in Germany](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"}, by Melissa Widas (MEDS 2024)
-    - [Visualizing Millions of People on the Move](https://www.visualcinnamon.com/portfolio/urbanization/){target="_blank"}, by Nadieh Bremer
-    - [the Kuijpers familytree](https://www.studioterp.nl/my-family-a-visualization/){target="_blank"}, by Sonja Kuijpers
-2. address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations).
+<!-- - apply the appropriate code chunk options (e.g. in most cases, code and outputs should be rendered but warnings and messages should not) -- see the Quarto documentation on [HTML Code Blocks](https://quarto.org/docs/output-formats/html-code.html){target="_blank"} and [Execution Options](https://quarto.org/docs/computations/execution-options.html){target="_blank"} for more -->
+  <!-- - (optional) I recommend also applying the [`code-fold: true` option](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}, which collapses code chunks and makes it easier for readers to focus on your writing and embedded visualizations (while still allowing them to explore your code) -->
 
-::: {.callout-tip}
-## Storytelling helps to engage your readers
+<!-- ::: -->
 
-Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers!
-:::
+### 2. Share your design process in a blog post-style write up {#part2-write}
 
-[**You may submit your assignment in one of two ways:**]{.teal-text}
+You will share your data design process and decisions in a short, 1-2 page (~500-1,000 words) science communication blog post-style write up. Your writing should be structured as follows:
+
+1. Open with an engaging introduction paragraph(s), which states your motivation, question(s), data / data source(s), and goal(s) of your visualization. Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers. 
+<!-- A few examples: -->
+    <!-- - [Relationship between bee behavior and vineyard types in Germany](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"}, by Melissa Widas (MEDS 2024) -->
+    <!-- - [Visualizing Millions of People on the Move](https://www.visualcinnamon.com/portfolio/urbanization/){target="_blank"}, by Nadieh Bremer -->
+    <!-- - [the Kuijpers familytree](https://www.studioterp.nl/my-family-a-visualization/){target="_blank"}, by Sonja Kuijpers -->
+    
+2. Embed / render your final data visualization product(s) (e.g. your full infographic, your three data visualizations, or your approved deliverable) following your introduction. If you are rendering your data viz product from code, be sure that: 
+    - *just* the output renders and *not* the code (e.g. using code chunk options `eval: true` & `echo: false`)
+    - warnings and messages are suppressed, as necessary (e.g. using code chunk options `warning: false` & `message: false`); other intermediate products should not be rendered
+    - see the Quarto documentation on [HTML Code Blocks](https://quarto.org/docs/output-formats/html-code.html){target="_blank"} and [Execution Options](https://quarto.org/docs/computations/execution-options.html){target="_blank"} for more
+
+3. The body of your blog post should address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations).
+
+4. Include the all code used to generate your final data viz products in a collapsible code chunk (see code chunk option, [`code-fold: true`](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}) at the end of your blog post. Your code should: 
+    - print, but not execute (i.e. use code chunk options `eval: false` & `echo: true`)
+    - follow the [tidyverse style guide](https://style.tidyverse.org/){target="_blank"} (important styles are outlined on the [course website](../../clean-code-guide.qmd#general-conventions){target="_blank"})
+    - be appropriately organized and annotated (see [these recommendations](../../clean-code-guide.qmd#annotating-code){target="_blank"})
+    
+<!-- 1. include an engaging introduction paragraph(s), which states your motivation, question(s), data / data source(s), and goal(s) of your visualization. A few great examples: -->
+<!--     - [Relationship between bee behavior and vineyard types in Germany](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"}, by Melissa Widas (MEDS 2024) -->
+<!--     - [Visualizing Millions of People on the Move](https://www.visualcinnamon.com/portfolio/urbanization/){target="_blank"}, by Nadieh Bremer -->
+<!--     - [the Kuijpers familytree](https://www.studioterp.nl/my-family-a-visualization/){target="_blank"}, by Sonja Kuijpers -->
+<!-- 2. address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations). -->
+
+<!-- ::: {.callout-tip} -->
+<!-- ## Storytelling helps to engage your readers -->
+
+<!-- Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers! -->
+<!-- ::: -->
+
+[**You may submit your write-up in one of two ways:**]{.teal-text}
 
 1. As a blog post on your personal website -- check out the [Adding a blog to your existing Quarto website](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) materials for a refresher, if needed
 
-::: {.callout-tip}
-## Remember, this is an opportunity to grow your professional portfolio!
-Regardless of which of the two publishing options you choose, consider storytelling strategies for effective and engaging data science writing -- review the [Blogging for data science slides](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} from the [EDS 296-1F course materials](https://ucsb-meds.github.io/EDS-296-DS-portfolios/){target="_blank"} for guidance. **Remember**, this is an opportunity to grow your portfolio and showcase both your technical and communication skills (through data viz *and* writing). 
-:::
-
-2. A published Quarto document that is deployed using GitHub Pages
+2. As a published Quarto document that is deployed using GitHub Pages. Expand the note below for detailed instructions on how to do so:
 
 ::: {.callout-note collapse=true}
 ## Instructions for publishing a Quarto doc using GitHub Pages
@@ -147,32 +173,55 @@ knitr::include_graphics("images/deployed.png")
 
 :::
 
-[**Finally, you are expected to present your final data visualization product to the class.**]{.teal-text}
+**Remember**, this is an opportunity to grow your portfolio and showcase both your technical and communication skills (through data viz *and* writing). The more thought, organization, and care you put into this write-up, the more confident you can be showing this to a potential employer!
 
-You will have 3 minutes to present your final data visualization(s). You must address the following in your presentation: 
+<!-- ::: {.callout-tip} -->
+<!-- ## Remember, this is an opportunity to grow your professional portfolio! -->
+<!-- Regardless of which of the two publishing options you choose, consider storytelling strategies for effective and engaging data science writing -- review the [Blogging for data science slides](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} from the [EDS 296-1F course materials](https://ucsb-meds.github.io/EDS-296-DS-portfolios/){target="_blank"} for guidance. **Remember**, this is an opportunity to grow your portfolio and showcase both your technical and communication skills (through data viz *and* writing).  -->
+<!-- ::: -->
+
+### 3. Present your data viz product to the class {#part3-present}
+
+<!-- [**Finally, you are expected to present your final data visualization product to the class.**]{.teal-text} -->
+
+Final project presentations will take place **in person during finals week**. You will have 3 minutes to present your final data visualization(s). You must address the following in your presentation: 
 
 - [ ] the question(s) you set out to answer with your visualization(s)
 - [ ] your data source(s)
 - [ ] your intended audience
-- [ ] two key insights from your visualization -- these should focus on what your audience should take away from the data
+- [ ] two key insights from your visualization(s) -- these should focus on what your audience should take away from the data
 - [ ] two design choices (e.g. colors, typography, graphic form, layout) that helped to shape the visualization(s) and improve communication for your intended audience
 - [ ] 1-2 challenges that you encountered during this project, and how you addressed / iterated on these issues
 - [ ] one thing that your especially proud of completing / learning / accomplishing for this project
 
 ::: {.callout-important}
-## **IMPORTANT:** 
-These are in-person presentations, held during finals week. Make-up presentations will not be permitted. Please plan accordingly!
+## **IMPORTANT: You are expected to present *in person*** 
+Make up presentations will not be permitted. Please plan accordingly!
 :::
 
 ## Rubric (specifications)
 
-You must complete the following to receive a “Satisfactory” mark for Assignment #4:
+You must complete sections [1](HW4.qmd#part1-choose), [2](HW4.qmd#part2-write), and [3](HW4.qmd#part3-present), as described above to receive a "Satisfactory" mark for Assignment #4. Please carefully review all assignment details before submitting! A few important self-checks:
 
-- [ ] Complete [option 1](HW4.qmd#option1-infographic), [option 2](HW4.qmd#option2-diff-audiences), or a pre-approved [option 3](HW4.qmd#option3-alternative).
-- [ ] All data visualizations should consider and implement (as appropriate) the ten design elements (listed above). It's up to you to decide how to consider, include, omit, and / or modify any of these elements.
-- [ ] You work must incorporate (or otherwise address in writing) any prior feedback from the instructor / TA. 
-- [ ] All code should be appropriately formatted and annotated, and code chunks should have the appropriate chunk options specified (e.g. suppress warnings and messages).
-- [ ] Describe your design process and decisions in a 1-2 page write-up, as described above.
-- [ ] Submit your work as either a published Quarto doc or as a blog post on your personal website.
-- [ ] Add the link to your published Quarto doc / blog post to [this Google Sheet](https://docs.google.com/spreadsheets/d/1VizY_Yc1m_EwudpIHcCPHlFIo8BIXyoQzlcFg7FhRiw/edit?usp=sharing){target="_blank"} by Saturday, 03/08/2025 11:59pm.
-- [ ] Present your visualizations to the class on [date TBD] (finals week).
+- [ ] I have carefully reviewed my chosen option and completed the project as described
+- [ ] I have considered and implemented (as appropriate) the ten design elements listed in [part 1](HW4.qmd#part1-choose). I acknowledge that it is up to me to decide how to consider, include, omit, and / or modify any of these elements. If I have ignored any of these ten design elements, I have communicated why that decision was made. 
+- [ ] I have reviewed and incorporated (or otherwise addressed in writing) any prior feedback from the instructor / TA.
+- [ ] I have described my design process and decisions in a blog post-style write up, which includes all required sections as detailed in [part 2](HW4.qmd#part2-write). 
+- [ ] My code is appropriately organized, formatted, and annotated, and all of my code chunks have the appropriate chunk options specified.
+- [ ] I have added the URL to my blog post-style write up to [this Google Sheet](https://docs.google.com/spreadsheets/d/1VizY_Yc1m_EwudpIHcCPHlFIo8BIXyoQzlcFg7FhRiw/edit?usp=sharing){target="_blank"} by Saturday, 03/08/2025 11:59pm. I have also verified that the URL works (e.g. I don't receive a 404 error when I try to open it).
+-  [ ] I have prepared a 3 minute-long presentation, which addresses each of the points detailed in [part 3](HW4.qmd#part3-present). I acknowledge that this in-person presentation is required to receive a "Satisfactory" mark on HW #4 and that no make up presentations will be permitted.
+
+
+
+
+
+
+<!-- ORIGINAL -->
+<!-- - [ ] Complete [option 1](HW4.qmd#option1-infographic), [option 2](HW4.qmd#option2-diff-audiences), or a pre-approved [option 3](HW4.qmd#option3-alternative). -->
+<!-- - [ ] All data visualizations should consider and implement (as appropriate) the ten design elements (listed above). It’s up to you to decide how to consider, include, omit, and / or modify any of these elements. -->
+<!-- - [ ] You work must incorporate (or otherwise address in writing) any prior feedback from the instructor / TA. -->
+<!-- - [ ] All code should be appropriately formatted and annotated, and code chunks should have the appropriate chunk options specified (e.g. suppress warnings and messages). -->
+<!-- - [ ] Describe your design process and decisions in a 1-2 page write-up, as described above. -->
+<!-- - [ ] Submit your work as either a published Quarto doc or as a blog post on your personal website. -->
+<!-- - [ ] Add the link to your published Quarto doc / blog post to this Google Sheet by Saturday, 03/08/2025 11:59pm. -->
+<!-- - [ ] Present your visualizations to the class on [date TBD] (finals week). -->
