--- a/course-materials/discussion/week5/week5-slides.qmd
+++ b/course-materials/discussion/week5/week5-slides.qmd
@@ -147,6 +147,8 @@ countdown::countdown(
 
 ---
 
+## {#sankey-diagram data-menu-title="Sankey diagram"}
+
 ```{r}
 #| eval: true
 #| echo: false
@@ -162,6 +164,8 @@ Source: [The Problem with Plastics](https://informationisbeautiful.net/visualiza
 :::
 
 ---
+
+## {#stream-graph data-menu-title="Stream graph"}
 
 ```{r}
 #| eval: true
@@ -181,6 +185,8 @@ Source: [Coal production since 1900](https://github.com/nrennie/tidytuesday/tree
 
 ---
 
+## {#waffle-chart data-menu-title="Waffle chart"}
+
 ```{r}
 #| eval: true
 #| echo: false
@@ -198,6 +204,8 @@ Source: [Affordable Housing](https://public.tableau.com/app/profile/filippo.mast
 :::
 
 ---
+
+## {#radar-plot data-menu-title="Radar plot"}
 
 ```{r}
 #| eval: true
@@ -217,6 +225,8 @@ Source: [Changing energy consumption across G7 countries 2000-2020](https://gith
 
 ---
 
+## {#icon-array data-menu-title="Icon array"}
+
 ```{r}
 #| eval: true
 #| echo: false
@@ -232,6 +242,8 @@ Source: [Over 45,000 homes powered by trash](https://github.com/nrennie/tidytues
 :::
 
 ---
+
+## {#treemap data-menu-title="Treemap"}
 
 ```{r}
 #| eval: true
@@ -253,6 +265,8 @@ Source: [The Baltimore Trash Wheel Family](https://github.com/Haclio/TidyTuesday
 
 ---
 
+## {#voronoi-treemap data-menu-title="Voronoi treemap"}
+
 ```{r}
 #| eval: true
 #| echo: false
@@ -268,6 +282,8 @@ Source: [How do we spend our time?](https://github.com/nrennie/tidytuesday/tree/
 :::
 
 ---
+
+## {#heatmap-categorical data-menu-title="Heatmap (categorical)"}
 
 ```{r}
 #| eval: true
@@ -287,6 +303,7 @@ Source: [Stakeholder perceptions of the relative importance of urban services pr
 
 ---
 
+## {#heatmap-continuous data-menu-title="Heatmap continuous"}
 
 ```{r}
 #| eval: true
@@ -304,25 +321,27 @@ knitr::include_graphics("images/heatmap-seattle-bikes.png")
 Source: [Seattle's Bike Counts per Time of Day and Weekday 2014-2019](https://github.com/spren9er/tidytuesday/blob/master/tidytuesday_201914_seattle_bike_counters.r){target="_blank"}, by [Torsten Sprenger](https://www.spren9er.de/){target="_blank"}
 :::
 
+<!-- --- -->
+
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| out-width: "100%" -->
+<!-- #| fig-align: "center" -->
+<!-- knitr::include_graphics("images/bump-data-sources.png") -->
+<!-- ``` -->
+
+<!-- <br> -->
+
+<!-- ::: {.footer} -->
+<!-- **Bump Chart** -->
+
+<!-- Source: [Top domains fo TidyTuesday data sources](https://github.com/gkaramanis/tidytuesday/tree/master/2024/2024-week_27){target="_blank"}, by [Georgios Karamanis](https://karaman.is/){target="_blank"} -->
+<!-- ::: -->
+
 ---
 
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "100%"
-#| fig-align: "center"
-knitr::include_graphics("images/bump-data-sources.png")
-```
-
-<br>
-
-::: {.footer}
-**Bump Chart**
-
-Source: [Top domains fo TidyTuesday data sources](https://github.com/gkaramanis/tidytuesday/tree/master/2024/2024-week_27){target="_blank"}, by [Georgios Karamanis](https://karaman.is/){target="_blank"}
-:::
-
----
+## {#sank data-menu-title="Sankey diagram"}
 
 ```{r}
 #| eval: true
@@ -519,6 +538,24 @@ knitr::include_graphics("images/petal-plot-dogs.png")
 **Petal Plot**
 
 Source: [Dog Breeds](https://github.com/BlakeRMills/TidyTuesday/tree/main/2022/Dog%20Breeds%20(1%20Feb%202022)){target="_blank"}, by [Blake Robert Mills](https://www.blakerobertmills.com/){target="_blank"}
+:::
+
+---
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/donut-fishing-vessels.png")
+```
+
+<br>
+
+::: {.footer}
+**Donut Chart**
+
+Source: [The World's Largest Fishing Fleet](https://ramhunte.github.io/blogs/china_fishing/){target="_blank"}, by [Ray Hunter](https://ramhunte.github.io/){target="_blank"} (final infograhic for EDS 240, winter 2024). Also check out [this article](https://medium.com/@hypsypops/pie-chart-vs-donut-chart-showdown-in-the-ring-5d24fd86a9ce){target="_blank"} on pie vs. donut charts.
 :::
 
 ---
