--- a/course-materials/week10.qmd
+++ b/course-materials/week10.qmd
@@ -45,33 +45,17 @@ knitr::include_graphics(here::here("images", "horst-touchstones.png"))
 
 *Coming soon!* 
 
-<!-- ::: {.grid} -->
+<!-- - Misc. charts: week10.1-misc-charts-slides.qmd -->
+<!-- - Prompt engineering: https://docs.google.com/presentation/d/11i_Q33FCaKlQYNlGUpzOa8zb9fpfxB3eTFfD6cjdlZo/edit#slide=id.p -->
+<!-- - Quarter recap: lecture-slides/week10.3-recap.qmd -->
 
-<!-- ::: {.g-col-12 .g-col-md-4} -->
-<!-- ::: {.center-text} -->
-<!-- [**Misc. charts**]{.teal-text .body-text-m} -->
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
+  
+*Coming soon!*
 
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 10.1 slides](lecture-slides/week10.1-misc-charts-slides.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
+### A. Prepare your final presentation 
 
-<!-- ::: {.g-col-12 .g-col-md-4} -->
-<!-- ::: {.center-text} -->
-<!-- [**Prompt engineering**]{.teal-text .body-text-m} -->
-
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 10.2 slides](https://docs.google.com/presentation/d/11i_Q33FCaKlQYNlGUpzOa8zb9fpfxB3eTFfD6cjdlZo/edit#slide=id.p){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
-
-<!-- ::: {.g-col-12 .g-col-md-4} -->
-<!-- ::: {.center-text} -->
-<!-- [**Quarter recap**]{.teal-text .body-text-m} -->
-
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 10.3 slides](lecture-slides/week10.3-recap.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
-
-<!-- ::: -->
+We'll use our last discussion section to give and receive feedback on final presentation plans. 
 
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
