--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -122,7 +122,7 @@ Add a new blank file to your class repo at the following location: `EDS-240-clas
 
 Install the [ColorPick Eyedropper](https://chrome.google.com/webstore/detail/colorpick-eyedropper/ohcpnigalekghcmgcdcenkpelffpdolg) Google Chrome extension, which makes it easy to select color values from webpages.
 
-## Discussion Materials
+## {{< fa comments title="two speech bubbles" >}} Discussion Materials
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
