updated some images in lecture 1.1

--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -171,7 +171,7 @@ Complete the following step under your own personal GitHub profile, *not* via Gi
     - [ ] Link to (or otherwise prove the existence of) at least one data set that you plan to use for Assignment #4.
     - [ ] Answer all five Part 2c questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
     - [ ] Ensure that your GitHub issue is neatly organized / formatted (you can use Markdown syntax here!).
-    - [ ] Tag your instructor (**@samanthacsik**) and TA (**@TBD**) somewhere in your issue (at the start or end may make the most sense) -- this notifies us of your issue.
+    - [ ] Tag your instructor (**@samanthacsik**) and TA (**@annieradams**) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
 - [ ] Importing your data is *optional* -- if you'd like to start playing around with your data, do so in a file named, `HW1-find-data.qmd`.
 - [ ] Add your repository's URL next to your name on [this Google Sheet](https://docs.google.com/spreadsheets/d/1VizY_Yc1m_EwudpIHcCPHlFIo8BIXyoQzlcFg7FhRiw/edit?usp=sharing){target="_blank"} by 11:59pm on Sat 01/18/2025.
 - [ ] ***Optional:** If you are pursuing ([Option 3](HW4.qmd#option3-alternative){target="_blank"}), please share a Google Doc with your proposal via email by 11:59pm on Sat 01/18/2025. Be sure to send it to both your instructor (**scsik@ucsb.edu**) and TA (**gstephenson@ucsb.edu**) with the subject line: **EDS 240 HW4 Proposal Submission.***
