--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -118,7 +118,7 @@ knitr::include_graphics("images/week1/sam.png")
 #| echo: false
 #| fig-align: "center"
 #| out-width: "55%" 
-knitr::include_graphics("images/week1/tbd.png")
+knitr::include_graphics("images/week1/annie.png")
 ```
 
 ::: {.center-text}
@@ -350,7 +350,7 @@ Your course grade will be based off the following:
 
 ::: incremental
 - **3 Self-reflections** - a place to reflect on your learning plan / goals, challenges, etc. (5 days to complete each)
-- **4 Homework Assignments** - longer assignments where you'll apply conceptual knowledge & technical skills to data viz tasks (10 days to complete each)
+- **4 Homework Assignments** - longer assignments where you'll apply conceptual knowledge & technical skills to data viz tasks (14 days to complete each)
 - **8 End-of-class surveys** - short surveys to help me better understand your weekly class experience (due by EOD each day there is lecture)
 - **8 Lectures** - a mix of slide-based lectures, live-coding, and individual / group-based critical thinking and technical exercises (attendance mandatory, Mondays 12:15-3:15pm PT)
 :::
