--- a/index.qmd
+++ b/index.qmd
@@ -52,7 +52,7 @@ knitr::include_graphics("images/sam.png")
 ```
 
 ::: {.center-text}
-[**Sam Csik**]{.teal-text}  
+[**Sam Shanny-Csik**]{.teal-text}  
 **Email:** [scsik@ucsb.edu](mailto::scsik@ucsb.edu)  
 **Learn more:** [samanthacsik.github.io](https://samanthacsik.github.io/)  
 :::
