minor updates to SRs

--- a/course-materials/assignments/SR1-precourse.qmd
+++ b/course-materials/assignments/SR1-precourse.qmd
@@ -12,7 +12,7 @@ Because everyone is participating under unique circumstances, I want to learn ab
 
 [**Some questions about school and life:**]{.teal-text}
 
-- [ ] **1.** Where are you coming from (e.g. “I recently finished my undergraduate degree”, “I've been working in industry X for Y years”) 
+- [ ] **1.** Where are you coming from (e.g. “I recently finished my undergraduate degree”, “I've been working in industry X for Y years”)? 
 - [ ] **2.** What do you hope to get out of this class?
 - [ ] **3.** If you have a particular career goal in mind, how does this course apply to your future career, if at all?
 - [ ] **4.** What do you wish your instructors knew about you, but don't?
@@ -31,7 +31,7 @@ Because everyone is participating under unique circumstances, I want to learn ab
 [**Some fun questions:**]{.teal-text}
 
 - [ ] **13.** What activity(ies) (outside of school / work) brings you the most joy? How do you plan to incorporate that activity into your schedule this quarter (if at all)? If you are unable to do so, is there something else you can plan to do that will bring you similar joy? 
-- [ ] **14.** What is a piece of media you enjoyed recently? (e.g. music, book, movie, tweet, meme) 
+- [ ] **14.** What is a piece of media you enjoyed recently? (e.g. music, book, movie, meme) 
 
 ## Rubric (specifications)
 
@@ -41,7 +41,6 @@ You must complete the following, as detailed below, to receive a "Satisfactory" 
 
   - [ ] Include your preferred name in the `author` field of the `SR1-precourse-reflection.qmd` YAML. 
   - [ ] Answer all 14 questions, above. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
-  - [ ] If you decide to break your code chunks up, ensure that each has the chunk options, `#| eval: false` and `#| echo: true` set -- this ensures that the code renders but the output is suppressed.
   - [ ] We (your instructors) should be able to successfully render `SR1-precourse-reflection.qmd` locally without error. 
-  - [ ] Push your completed `SR1-precourse-reflection.qmd` to GitHub via GitHub Classrooms by 11:59pm PT on Sat 01/11/2025.
+  - [ ] Push your completed `SR1-precourse-reflection.qmd` to GitHub via GitHub Classroom by 11:59pm PT on Sat 01/11/2025.
 
