--- a/course-materials/assignments/SR2-midcourse.qmd
+++ b/course-materials/assignments/SR2-midcourse.qmd
@@ -15,7 +15,7 @@ Reread your responses to your Pre-course reflection (SR #1) to refresh your memo
 - [ ] **3.** If you've needed help, how have you sought it out? If you haven't sought out help, why not?
 - [ ] **4.** Looking forward, how have your learning goals changed? Have they stayed the same? 
 - [ ] **5.** What topics have excited you the most (so far)? Have you spent time or efforts outside of class and / or the assignments diving deeper into any of these topics? If yes, what did you learn?
-- [ ] **6.** How would you change the structure of this course, if at all? If you wouldn't, what in particular has been working for you?
+- [ ] **6.** How would you change the structure of this course, if at all? If you wouldn't, what in particular about the structure has been working well for you?
 - [ ] **7.** Is there anything about this course that you are really enjoying? Anything that isn't working for you? 
 - [ ] **8.** What else would you like me to know about your experience in the course thus far? 
 
@@ -27,4 +27,4 @@ You must complete the following, as detailed below, to receive a "Satisfactory" 
 
   - [ ] Include your preferred name in the `author` field of the `SR2-precourse-reflection.qmd` YAML. 
   - [ ] Answer all 8 questions, above. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
-  - [ ] Push `SR2-midcourse-reflection.qmd` to GitHub using GitHub Classrooms by 11:59pm PT on Sat 02/03/2025
+  - [ ] Push `SR2-midcourse-reflection.qmd` to GitHub using GitHub Classroom by 11:59pm PT on Sat 02/03/2025
