--- a/course-materials/assignments/SR3-endcourse.qmd
+++ b/course-materials/assignments/SR3-endcourse.qmd
@@ -23,6 +23,6 @@ You must complete the following, as detailed below, to receive a "Satisfactory" 
 
 - [ ] Include your preferred name in the `author` field of the `SR3-endcourse-reflection.qmd` YAML. 
 - [ ] Answer all 6 questions, above. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
-- [ ] Push `SR3-endcourse-reflection.qmd` to GitHub using GitHub Classrooms by 11:59pm PT on Sat 03/15/2025.
+- [ ] Push `SR3-endcourse-reflection.qmd` to GitHub using GitHub Classroom by 11:59pm PT on Sat 03/15/2025.
 
-*Additionally, please complete the formal UCSB course evaluations for both the EDS 240 instructor (Sam Csik) and TA (Sloane Stephenson) by the deadline (Friday, 03/14/2025).*
+*Additionally, please complete the formal UCSB course evaluations for both the EDS 240 instructor and TA by the deadline (Friday, 03/14/2025).*
